# slint-ruby

./: .gitignore  Gemfile  README.md  Rakefile  slint-ruby.gemspec
.github/workflows/: ci.yml
ext/slint_ruby/: Cargo.toml  extconf.rb
ext/slint_ruby/src/: brush.rs  errors.rs  image.rs  interpreter.rs  lib.rs  models.rs  timer.rs  value.rs
lib/: slint.rb
lib/slint/: component.rb  version.rb
test/: test_brush.rb  test_callbacks.rb  test_compiler.rb  test_load_file.rb  test_models.rb  test_properties.rb
